{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "18fd3521-7a89-f76a-35f5-e3b18eed9b9d",
  "resources": [
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "module-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:internet-gateway/igw-02989a5c60f01cda7",
            "id": "igw-02989a5c60f01cda7",
            "owner_id": "061039803094",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-IGW",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-IGW",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:route-table/rtb-0d2229ac76a12481a",
            "id": "rtb-0d2229ac76a12481a",
            "owner_id": "061039803094",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-PrivateRT",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-PrivateRT",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:route-table/rtb-09b14fcaaf2a5d1dc",
            "id": "rtb-09b14fcaaf2a5d1dc",
            "owner_id": "061039803094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02989a5c60f01cda7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004df245e65373b22",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-048c03c7e2f81f3fa"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.private-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fed1ac857fc3b410",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-005078021d38c7f1e"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.private-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e6205174c723302",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-0efee7f26f1c145a7"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.private-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-RTA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b4656c1da605ecf",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-0d43c4171568b0168"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.public-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293fe6dbfdf8547f",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-0ed8b23d54a1ab881"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.public-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e631732c934d0ac5",
            "route_table_id": "rtb-09b14fcaaf2a5d1dc",
            "subnet_id": "subnet-0aafd9da9f87029b8"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_internet_gateway.module-IGW",
            "module.prod_vpc_1.aws_route_table.public_route_table",
            "module.prod_vpc_1.aws_subnet.public-subnets",
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-048c03c7e2f81f3fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "182.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048c03c7e2f81f3fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-005078021d38c7f1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "182.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005078021d38c7f1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-2",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-2",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-0efee7f26f1c145a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "182.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efee7f26f1c145a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-3",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-private_subnet-3",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-0d43c4171568b0168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "182.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d43c4171568b0168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-0ed8b23d54a1ab881",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "182.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed8b23d54a1ab881",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-2",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-2",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:subnet/subnet-0aafd9da9f87029b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "182.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aafd9da9f87029b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061039803094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-3",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1-public_subnet-3",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "vpc_id": "vpc-08cc8623f119b9694"
          },
          "dependencies": [
            "module.prod_vpc_1.aws_vpc.module_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "module_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:061039803094:vpc/vpc-08cc8623f119b9694",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "182.0.0.0/16",
            "default_network_acl_id": "acl-085e690dc3ec22233",
            "default_route_table_id": "rtb-082c053fd4c18b92b",
            "default_security_group_id": "sg-0646aa0301c755864",
            "dhcp_options_id": "dopt-05c09a9e4353ce38a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cc8623f119b9694",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082c053fd4c18b92b",
            "owner_id": "061039803094",
            "tags": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            },
            "tags_all": {
              "CostCenter": "Hyd-8080",
              "Name": "prod_vpc_1",
              "Owner": "Dev-Team",
              "TamDL": "rteja170@gmail.com",
              "environment": "prod"
            }
          }
        }
      ]
    }
  ]
}